<resources>
    <string name="app_name">CycloneCarpool</string>
    <string name="welcome_to_">WELCOME TO CYCLONE CARPOOL</string>
    <string name="sign_up">Sign Up</string>
    <string name="search">Search</string>
    <string name="trips_near_">Trips Near You</string>
    <string name="chat_name">Marcel S.</string>
    <string name="chat_preview_tmp">Education is what remains after one has forgotten</string>
    <string name="messages">Messages</string>
    <string name="back_btn">Back</string>
    <string name="message_hint">Message...</string>
    <string name="lorem_ipsum">Lorem ipsum odor amet, consectetuer adipiscing elit.</string>
    <string name="message_time_temp">8:57 pm</string>
    <string name="profile_header">Profile</string>
    <string name="profile_name">Marcel Slowikowski</string>
    <string name="profile_email">marceljs@iastate.edu</string>
    <string name="edit_btn_label">Edit</string>
    <string name="profile_fname_hint">First:</string>
    <string name="profile_lname_hint">Last:</string>
    <string name="profile_email_hint">Email:</string>
    <string name="confirm_btn_label">Done</string>
    <string name="tripinfo_header">Trip Info</string>
    <string name="trip_route_p"><![CDATA[Placeholder -> Placeholder]]></string>
    <string name="trip_time_p">xx/xx/xxxx @ 00:00 AM CST</string>
    <string name="trip_pickup_p">Pick Up: TBD</string>
    <string name="trip_seats_p">X Seats Available</string>
    <string name="trip_price_p">$00 /</string>
    <string name="trip_roundtrip">Round Trip</string>
    <string name="trip_oneway">One Way</string>
    <string name="trip_nosmoking">No Smoking</string>
    <string name="trip_edit">Edit</string>
    <string name="trip_delete">Delete</string>
    <string name="chat_pfp_d">Profile Picture</string>
    <string name="trip_passengers_heading">Passengers</string>
    <string name="driver_pfp_d">Driver Profile Pic</string>
    <string name="trip_driver_p">Tyler</string>
    <string name="review_heading">Review</string>
    <string name="review_input_hint">Your Review...</string>
    <string name="_0_0">0.0</string>
    <string name="verification_required">Verification Required</string>
    <string name="verification_message">You need to verify your account to perform actions on this app.</string>
    <string name="verify_now">Verify Now</string>
    <string name="close">Close</string>
    <string name="verification_warning_icon">Verification Warning Icon</string>
</resources>