<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_sq_white"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chat_image"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="11dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/circle_outline"
        android:contentDescription="@string/chat_pfp_d"
        android:elevation="4dp"
        android:translationZ="5dp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        />

    <TextView
        android:id="@+id/chat_name"
        android:layout_width="79dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/proximanova_extrabold"
        android:gravity="center_vertical"
        android:text="@string/chat_name"
        android:textAppearance="@style/chat_name"
        android:translationZ="5dp"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
    />

    <View
        android:id="@+id/line_3"
        android:layout_width="1dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:background="@drawable/thin_line_v"
        android:translationZ="5dp"
        app:layout_constraintStart_toEndOf="@+id/chat_name"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        />

    <TextView
        android:id="@+id/chat_preview"
        android:layout_width="135dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="4dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:text="@string/chat_preview_tmp"
        android:textAppearance="@style/chat_preview"
        android:gravity="center_vertical"
        android:translationZ="5dp"
        app:layout_constraintStart_toEndOf="@+id/line_3"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chat_open"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/arrow_forward"
        android:translationZ="5dp"
        app:layout_constraintStart_toEndOf="@+id/chat_preview"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_2" />

</androidx.constraintlayout.widget.ConstraintLayout>